--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@
 .site-header--topbar-link {
     margin-left: 68px;
     padding-top: 26px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     text-decoration: none;
     color: black;
