--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@
     flex-direction: column;
     gap: 30px;
     padding: 10px 30px;
-    min-height: 100%;
+    min-height:100%;
     border-radius: 15px;
     background-color: #F2F2F2;
 }
@@ -327,7 +327,7 @@
 .sponsored-headline--title {
     font-size: 1.3rem;
     font-weight: 700;
-
+    
 }
 
 .fa-chart-line {
@@ -408,7 +408,7 @@
 }
 
 .activity-card--link {
-    display: flex;
+    display:flex;
     width: 23%;
     text-decoration: none;
     color: #000000;
@@ -423,7 +423,6 @@
 .activity-pic {
     height: 380px;
     width: 100%;
-    object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
 
@@ -487,13 +486,10 @@
         align-items: flex-start;
     }
 
-    /* Site Header - Filters-TAGS */
+    /* Site Header - TAGS */
 
-    .site-header--filters-all-tags {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        width: 100%;
+    .site-header--filters-tag {
+        font-size : 1rem;
     }
 
     /* Site Main Content - ALL */
@@ -515,8 +511,7 @@
     }
 
     .card-info {
-        /* height: 4vh;*/
-        padding: 5px;
+       padding: 15px;
     }
 
     /* Site Main Content - SPONSORED */
@@ -529,20 +524,40 @@
     /* Site Main Content - SPONSORED-GROUP */
 
     .sponsored--group {
-        padding: 30px;
+        padding:30px;
+    }
+
+    .sponsored--cards {
+        flex-direction: row;
+    }
+
+    .col-card--link {
+        width: 33.33%;
     }
 
     /* Site Main Content - ACTIVITY -CARDS */
 
+    .activity-card--link {
+        height: 270px;
+    }
+
     .activity-pic {
-        height: 200px;
+        height: 75%;
         object-fit: cover;
     }
 
     .activity-card-info {
+        height: 10%;
+        padding: 20px 19px;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+
+    .activity-card-title {
+        font-size: 1rem;
+        flex-grow: 1;
+
     }
 
     /* Site Footer - MENU */
@@ -620,7 +635,7 @@
         width: 100%;
     }
 
-    .site-header--search-gps {
+    .site-header--search-gps{
         width: 70px;
     }
 
@@ -628,7 +643,7 @@
         width: 100%;
     }
 
-    .site-header--search-text {
+    .site-header--button span {
         display: none;
     }
 
@@ -649,7 +664,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        gap: 10px;
+        gap: 10px;             
     }
 
     .site-header--filters-tag {
@@ -689,6 +704,15 @@
 
     .sponsored-headline--title {
         padding: 0;
+    }
+
+    /* Site Main Content - SPONSORED-CARDS */
+    .sponsored--cards {
+        flex-direction: column;
+    }
+
+    .col-card--link {
+        width: 100%;
     }
 
     /* Site Main Content - OFFERS */
@@ -745,14 +769,21 @@
 
     .activity-card--link {
         width: 100%;
+        height: 200px;
     }
 
     .activity-pic {
         height: 141px;
+        object-fit: cover;
+    }
+
+    .activity-card-info {
+        padding: 20px 19px;
     }
 
     .activity-card-title {
         font-size: 0.9rem
+
     }
 
     /* Site Footer - CONTENT */
